IDEA-343766 Avoid breaking "Search everywhere" completely on misbehaving extensions (specifically, ML)
GitOrigin-RevId: f81edba6e76cb17b9462ae7f3419de2ab6d1cb20